force-app/main/default/force-app/main/default/objects/ARMT_FlowLog__c/ARMT_FlowLog__c.object-meta.xml
<CustomObject>
    <label>ARMT Flow Log</label>
    <pluralLabel>ARMT Flow Logs</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
    <description>Logs flow fault and exception details during validation processing.</description>
</CustomObject>