force-app/main/default/force-app/main/default/objects/ARMT_FlowLog__c/fields/Context_Id__c.field-meta.xml
<CustomField>
    <fullName>Context_Id__c</fullName>
    <label>Context ID</label>
    <type>Text</type>
    <length>18</length>
    <description>The Salesforce record ID providing context for this log entry.</description>
</CustomField>