force-app/main/default/force-app/main/default/objects/ARMT_FlowLog__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Detailed log message or fault description.</description>
</CustomField>