force-app/main/default/force-app/main/default/objects/ARMT_FlowLog__c/fields/Log_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Log_Timestamp__c</fullName>
    <label>Log Timestamp</label>
    <type>DateTime</type>
    <description>The date and time when this log entry was created.</description>
</CustomField>