force-app/main/default/force-app/main/default/objects/ARMT_FlowLog__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Text</type>
    <length>255</length>
    <description>The class or component that generated this log entry.</description>
</CustomField>